--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/cdk": "^14.0.5",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
+    "@angular/core": "^14.1.0",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.0.5",
     "@angular/platform-browser": "^14.0.0",
@@ -32,6 +32,11 @@
     "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
     "@types/express": "^4.17.13",
+    "@types/gapi": "^0.0.42",
+    "@types/gapi.auth2": "^0.0.56",
+    "@types/gapi.client.sheets": "^4.0.20201029",
+    "@types/google.accounts": "^0.0.2",
+    "@types/gsi": "^0.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^18.0.6",
     "jasmine-core": "~4.1.0",
